# sever_jop_parser

./: .gitignore  README.md
app/: pyproject.toml
app/apps/scraper/: admin.py  models.py  urls.py  views.py
app/apps/scraper/constants/: enums.py
app/apps/scraper/helpers/: parser_helper.py
app/apps/scraper/migrations/: 0001_initial.py
app/apps/scraper/services/: parser_dou.py
app/apps/scraper/templates/: base.html
app/config/: asgi.py  settings.py  urls.py  wsgi.py
