[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Roman Naumtsov <TheFlexMAX@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
celery = "^5.2.1"
redis = "^4.0.2"
django-celery-beat = "^2.2.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
